# shodan-rust

./: CLAUDE.md  Cargo.toml
crates/i1-audit/: Cargo.toml
crates/i1-audit/src/: error.rs
crates/i1-audit/src/discovery/: mod.rs  processes_fallback.rs
crates/i1-ca/src/: aaa.rs
crates/i1-cli/: Cargo.toml
crates/i1-cli/src/cli/: args.rs  mod.rs
crates/i1-cli/src/cli/commands/: defend.rs  mod.rs  scan.rs  threat.rs
crates/i1-cli/src/defend/: mod.rs
crates/i1-core/src/types/: host.rs
