[workspace]
resolver = "2"
members = [
    "crates/i1-core",
    "crates/i1-client",
    "crates/i1-recon",
    "crates/i1",
    "crates/i1-cli",
    "crates/i1-providers",
    "crates/i1-shodan",
    "crates/i1-censys",
    "crates/i1-criminalip",
    "crates/i1-native",
    "crates/i1-honeypot",
    "crates/i1-ca",
    "crates/i1-srv",
    "crates/i1-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/8b-is/i1"
keywords = ["security", "reconnaissance", "osint", "threat-intelligence", "i1"]
categories = ["network-programming", "api-bindings"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging/Tracing
tracing = "0.1"

# Async utilities
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

# Rate limiting
governor = "0.8"

# Network tools (optional features)
whois-rs = "1.6"
hickory-resolver = "0.25"
trippy-core = "0.11"

# URL handling
url = "2.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
i1-core = { path = "crates/i1-core" }
i1-client = { path = "crates/i1-client" }
i1-recon = { path = "crates/i1-recon" }
i1-providers = { path = "crates/i1-providers" }
i1-shodan = { path = "crates/i1-shodan" }
i1-censys = { path = "crates/i1-censys" }
i1-criminalip = { path = "crates/i1-criminalip" }
i1-native = { path = "crates/i1-native" }
i1-honeypot = { path = "crates/i1-honeypot" }
i1-srv = { path = "crates/i1-srv" }
i1-audit = { path = "crates/i1-audit" }

# Testing
wiremock = "0.6"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
