[package]
name = "i1-cli"
description = "Security operations CLI for i1.is - threat intelligence made easy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["security", "cli", "osint", "threat-intelligence", "i1"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "i1"
path = "src/main.rs"

[features]
default = ["rustls", "shodan"]
rustls = ["i1/rustls"]
native-tls = ["i1/native-tls"]
recon = ["i1/full-recon"]
shodan = ["i1/shodan"]
censys = ["i1/censys"]
criminalip = ["i1/criminalip"]
native = ["i1/native"]
all-providers = ["shodan", "censys", "criminalip", "native"]

[dependencies]
# Internal crates
i1 = { path = "../i1" }
i1-core = { path = "../i1-core" }
i1-providers = { path = "../i1-providers" }
i1-audit = { path = "../i1-audit" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "color"] }

# Interactive mode
rustyline = { version = "14", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Output formatting
indicatif = { version = "0.17", features = ["tokio"] }
tabled = { version = "0.16", features = ["ansi"] }
console = "0.15"
colored = "2.1"

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.3"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Configuration
directories = "5.0"
toml = "0.8"

# Date/time
chrono = { workspace = true }

# Network utilities
reqwest = { workspace = true, features = ["rustls-tls"] }

# Misc
open = "5.3"
shellexpand = "3.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[lints]
workspace = true
